# onglai-classify-homologues

./: .gitignore  CITATION.cff  Dockerfile  LICENSE  README.md  __init__.py  classify_homols.py  dev_classify_homols.py  log  log.txt  nextgen_classify_homols.py  requirements.txt  setup.cfg  setup.py  utils.py
classify_homologues/: __init__.py  prototype-streamlit.py  utils.py
input/: COCONUT_DB_2021-11_trial.txt  PubChemLite_exposomics_20220225_trial.csv  README.md  eawagsurf_labels_175.csv  eawagsurf_smiles_175.csv  eiuba_labels_1154.txt  eiuba_smiles_1154.txt  pubchem_norman-sle_trial.csv  test1_labels_23.csv  test1_smiles_23.csv  test2_labels_43.csv  test2_smiles_43.csv  test3_labels_75.csv  test3_smiles_75.csv  test4_labels_20  test4_smiles_20  test4_smiles_75.csv
onglai-classify-homologues/: nextgen_classify_homols.py  utils.py
output_classify_homols/: classified_series.csv
output_eawagsurf/: classified_series.csv
output_eiuba/: classified_series.csv
output_test1/: classified_series.csv
output_test2/: classified_series.csv
output_test4/: classified_series.csv
src/classify_homologues/: __init__.py  nextgen_classify_homols.py  prototype-streamlit.py  utils.py  version.py
src/classify_homologues/output/: classified_series.csv
tests/: test1_23.csv  test_io.py
