##########################
# Setup.py Configuration #
##########################
[metadata]
name = classify_homologues
version = 0.0.1-dev
description = A cheminformatics algorithm to classify homologous series.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
install_requires =
    rdkit-pypi
    pandas
    numpy
    itertools
    os
    sys
    #click
    #mols2grid

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src