##########################
# Setup.py Configuration #
##########################
[metadata]
name = classify_homologues
version = 1.0.0
description = A cheminformatics algorithm to classify homologous series.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
install_requires =
    rdkit-pypi
    pandas
    numpy
    matplotlib
    #click
    #mols2grid

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src
